Closed Bug 1819266 Opened 2 years ago Closed 2 years ago

Table borders rendered incorrectly when table contains empty rows

Categories

(Core :: Layout: Tables, defect)

Firefox 110
defect

Tracking

()

VERIFIED FIXED
113 Branch
Tracking Status
firefox-esr102 --- wontfix
firefox110 --- wontfix
firefox111 --- wontfix
firefox112 --- wontfix
firefox113 --- verified
firefox114 --- verified

People

(Reporter: bugzzilla, Assigned: dshin)

References

(Regression)

Details

(Keywords: regression)

Attachments

(5 files)

Attached file collapse.html

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:109.0) Gecko/20100101 Firefox/110.0

Steps to reproduce:

Tables containing empty rows are rendered incorrectly when border-collapse=collapse.

No problem with Chrome.

See test case and screenshot.

Also happens with FF for Android.

Attached image collapse.png

Rendering on FF

Status: UNCONFIRMED → NEW
Ever confirmed: true
Severity: -- → S3

Set release status flags based on info from the regressing bug 895096

Further reduced.
Fairly sure it's pointing to the same root cause, but will have to verify.

Assignee: nobody → dshin

If border-collapse is set and border is set for td but there's an empty
tr, the collapsed border was pushed out wrongly by the empty tr.
Columns borders cannot collapse like row borders as you can't define an empty
column without defining a cell.

:dholbert probably too late to uplift for 112, but is there someone that could take a look at the attached patch?

See Also: → 1825384

I'll take a look today, yeah. (I'd advise against uplift; our standard cautious ride-the-trains approach should be fine, given that we've apparently been shipping this bug since Firefox 57, via regressor bug 895096.)

Flags: needinfo?(dholbert)
Pushed by dshin@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b0200cc301cb Ensure block-direction collapsed border does not extend beyond its row. r=dholbert
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/39295 for changes under testing/web-platform/tests
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch
Upstream PR merged by moz-wptsync-bot

Reproducible on a 2023-03-28 Nightly build on macOS 12.
Verified as fixed on Firefox 113.0b5(build ID: 20230418175842) and Nightly 114.0a1(build ID: 20230419214510) on macOS 12, Windows 10, Ubuntu 22.

Status: RESOLVED → VERIFIED
Flags: qe-verify+

Problem is not fixed in 113. See my original test case. Now at the bottom of the table the vertical lines are too short instead of too long.

Attached image Results after "fix"

Screenshot from original test case (zoomed in).

Regressions: 1832110
See Also: → 1434366
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: