Bug 1819266: Ensure block-direction collapsed border does not extend beyond its row. r=dholbert

If `border-collapse` is set and `border` is set for `td` but there's an empty
`tr`, the collapsed border was pushed out wrongly by the empty `tr`.
Columns borders cannot collapse like row borders as you can't define an empty
column without defining a cell.

Differential Revision: https://phabricator.services.mozilla.com/D173031